--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "factory-girl": "^5.0.4",
+    "faker": "^5.4.0",
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.3",
