--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/config/server.js --ignore __tests__",
+    "dev-apirest": "nodemon src/config/server.js --ignore __tests__",
     "pretest": "set NODE_ENV=test&&sequelize db:migrate",
     "test": "set NODE_ENV=test&&jest",
     "posttest": "set NODE_ENV=test&&sequelize db:migrate:undo:all"
