--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
     "@types/styled-components": "^5.1.7",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-styled-components": "^1.12.0",
