--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,19 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
+    "lodash": "^4.17.20",
     "next": "10.0.7",
+    "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.28",
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^17.0.2",
     "@types/styled-components": "^5.1.7",
     "@types/validator": "^13.1.3",
