--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,20 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
+    "cookie": "^0.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "next": "10.0.7",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-toastify": "^7.0.3",
     "styled-components": "^5.2.1",
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.28",
     "@types/prop-types": "^15.7.3",
