--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev-apirest": "nodemon src/config/server.js --ignore __tests__",
+    "build": "sucrase ./src -d ./dist --transforms imports",
+    "start": "node dist/config/server.js",
     "pretest": "set NODE_ENV=test&&sequelize db:migrate",
     "test": "set NODE_ENV=test&&jest",
     "posttest": "set NODE_ENV=test&&sequelize db:migrate:undo:all"
