--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start",
     "deploy:static": "next build && next export"
   },
@@ -15,6 +16,7 @@
     "lodash": "^4.17.20",
     "next": "10.0.7",
     "next-auth": "^3.6.0",
+    "next-on-netlify": "^2.9.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-cookie": "^4.0.3",
