--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+netlify.toml
+next-config.js
 
 # dependencies
 /node_modules
@@ -14,6 +16,7 @@
 
 # production
 /build
+
 
 # misc
 .DS_Store
